[package]
name = "oz-keystore"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "examples/*"
]

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
eth-keystore = "0.5.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
