[package]
name = "oz-keystore"
description = "A multi-chain keystore library that provides a unified interface for managing private keys."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/MCarlomagno/keystore"
repository = "https://github.com/MCarlomagno/keystore"
readme = "README.md"
keywords = ["keystore", "tool"]
categories = ["development-tools"]
exclude = [
    ".cargo_vcs_info.json",
]

[lib]
name = "oz_keystore"
path = "src/lib.rs"

[[example]]
name = "local-keystore-to-alloy-wallet"
path = "examples/local-keystore-to-alloy-wallet.rs"

[[example]]
name = "local-keystore-to-stellar-wallet"
path = "examples/local-keystore-to-stellar-wallet.rs"

[workspace]
members = [
    ".",
    "examples/*"
]

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
eth-keystore = "0.5.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

# EVM
hex = "0.4"

# stellar
stellar-strkey = "0.0.9"
