[package]
name = "hashicorp-vault-to-stellar-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
oz-keystore = { path = "../.." }
ed25519-dalek = "2.1.1"
stellar-strkey = "0.0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
rand = "0.8"